Fixed broken links on page buttons, updated some CSS that fell behind when transitioning, cleaned up CSS order

--- a/css/a1.css
+++ b/css/a1.css
@@ -55,13 +55,28 @@
 	color: #717070;
 	cursor: pointer;
 }
+.secondary_header {
+	overflow: auto;
+	padding-top: 30px;
+	padding-bottom: 30px;
+	border-style: groove;
+}
+.secondary_header ul li {
+	margin-top: 10px;
+	margin-right: 7%;
+	margin-bottom: 10px;
+	margin-left: 9%;
+	border-style: groove;
+}
 .left_article {
 	background-color: #FFFFFF;
 	width: 60%;
-	float: left;
+	height: auto;
+	float: right;
 	font-family: "Source Sans Pro";
 	color: #343434;
-	padding-bottom: 15px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
 .noDisplay {
 	display: none;
@@ -110,25 +125,6 @@
 	border-top-width: 2px;
 	font-family: "Source Sans Pro";
 }
-body {
-	margin-top: 0px;
-	margin-right: 0px;
-	margin-bottom: 0px;
-	margin-left: 0px;
-}
-.secondary_header {
-	overflow: auto;
-	padding-top: 30px;
-	padding-bottom: 30px;
-	border-style: groove;
-}
-.secondary_header ul li {
-	margin-top: 10px;
-	margin-right: 7%;
-	margin-bottom: 10px;
-	margin-left: 9%;
-	border-style: groove;
-}
 .social {
 	text-align: center;
 	margin-right: 0px;
@@ -166,6 +162,12 @@ body {
 #menu li {
 	font-weight: bold;
 	font-size: 20px;
+}
+body {
+	margin-top: 0px;
+	margin-right: 0px;
+	margin-bottom: 0px;
+	margin-left: 0px;
 }
 
 @media (max-width: 320px) {
